Basics/network/GatewayAPI/36.httproute-request-mirroring.yaml
# HTTP 流量镜像
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend
      containers:
        - image: vvoo/demoapp:v1.0
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
            limits:
              cpu: "20m"
              memory: "50Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-2
  labels:
    app: backend-2
    service: backend-2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: backend-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-2
      version: v1
  template:
    metadata:
      labels:
        app: backend-2
        version: v1
    spec:
      serviceAccountName: backend-2
      containers:
        - image: vvoo/demoapp:v2.1
          imagePullPolicy: IfNotPresent
          name: backend-2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
            limits:
              cpu: "20m"
              memory: "50Mi"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-mirror
spec:
  hostnames:
    - "eg-example.tluapitest.com"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: backend
        port: 80
      filters:
        - type: RequestMirror
          requestMirror:
            backendRef:
              group: ""
              kind: Service
              name: backend-2
              port: 80
      matches:
        - path:
            type: PathPrefix
            value: /


#  curl -v --header "Host: eg-example.tluapitest.com" http://eg-example.tluapitest.com/

# 查看日志，可以看到两个后端都收到了请求，backend-2 收到的请求是镜像请求
# kubectl logs deploy/backend && kubectl logs deploy/backend-2
